[tool.poetry]
name = "poetry-web"
version = "0.1.0"
description = ""
authors = ["vaisajuh <juha.vaisanen@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_web"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
pylint = "^2.15.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
